tests/compile-fail/cases/tainted_into_string.rs
use seck_taint::Tainted;

fn main() {
    let t: Tainted<Vec<u8>> = Tainted::__new_internal(b"hi".to_vec());
    let _s: String = t.into();
}
